<resources>
    <string name="app_name">Easy Weather</string>

    <!-- Strings para los items de la lista -->
    <string name="temperature">Temperatura:</string>
    <string name="min_temp">Mínima:</string>
    <string name="max_temp">Máxima:</string>
    <string name="termic_sensation">Sensación térmica:</string>

    <string name="pressure">Presión:</string>
    <string name="wind">Vientos a:</string>

    <!-- Valores por defecto para los campos de los items -->
    <string name="default_city_name">Nombre de la Ciudad</string>
    <string name="default_temperature">25°</string>
    <string name="description_test">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Sed quis semper sapien, et placerat nibh. Cras blandit
        quis eros non.
    </string>
    <string name="default_pressure">1013,25 hPa</string>
    <string name="default_wind">50 km/h</string>

    <!-- Menúes -->
    <string name="about">Acerca de</string>
    <string name="delete_city">Borrar de la lista</string>

    <!-- Actividad para agregado de ciudades -->
    <string name="city_add_title">Añadir ciudad</string>
    <string name="city_add_hint">Nombre de la ciudad</string>
    <string name="city_add_button">Añadir</string>
    <string name="wrong_city_name">Debe ingresar un nombre válido.</string>

    <!-- Actividad de "Acerca de" -->
    <string name="author">Creado por Eduardo Brahim Alí</string>
    <string name="github_link">Link a GitHub</string>
    <string name="lnkedin_link">Link a LinkedIn</string>

</resources>
