<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:background="@color/colorLightBlue"
    tools:context=".CityAddActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:fontFamily="@font/suez_one"
        android:text="@string/city_add_title"
        android:textColor="@color/colorFullBlack"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editCityName"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textCursorDrawable="@drawable/ic_ciadd_cursor"
        android:fontFamily="@font/suez_one"
        android:hint="@string/city_add_hint"
        android:textColorHint="@color/colorGrayFont"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonCityAdd"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:background="@color/colorWhite"
        android:fontFamily="@font/suez_one"
        android:onClick="onClickButtonCityAdd"
        android:text="@string/city_add_button"
        android:textColor="@color/colorLightBlue"
        android:padding="5dp"
        android:textSize="20sp" />

</LinearLayout>